tests/rosetta/out/Php/100-prisoners.error
run: exit status 255

Fatal error: Cannot redeclare function shuffle() in /tmp/100-prisoners.php on line 2
